# nana-claw-rs

./: Cargo.toml  README.md
src/: agent.rs  hooks.rs  ipc.rs  main.rs  mcp_server.rs  orchestrator.rs  session.rs  types.rs
src/provider/: anthropic.rs  mod.rs  openai.rs  openrouter.rs
src/tools/: bash.rs  filesystem.rs  grep.rs  mod.rs  web.rs
